Pruebas con porcentaje exitoso